--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 </head>
 <body>
   <!-- 双向柱状图 -->
-  <div id="horizontalChart" style="height: 700px"></div>
+  <div id="twoWayChart" style="height: 700px"></div>
   <!-- 井字型散点图 -->
-  <div id="scatterChart" style="width: 600px; height: 600px"></div>
+  <div id="ticTypeScatterChart" style="width: 600px; height: 600px"></div>
   <script crossorigin="anonymous" integrity="sha384-xtrmUNWJ2tdS4FJyVhTG4xpPXkfHBFY36SOeegdD40rRPQOCNBfiaxPY1ji+RKS2" src="https://lib.baomitu.com/echarts/3.8.5/echarts.min.js"></script>
-  <script src="js/chart.js"></script>
+  <script src="js/two-way-chart.js"></script>
+  <script src="js/tic-type-sccatter-chart.js"></script>
 </body>
 </html>
